# gtk-glade-test

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
gres/gui/: main.glade
src/: main.c
src/res/gui/: main.glade
